--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -14,24 +14,71 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <!-- VIEWPORT-->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#nosotrosLink").mouseover(function(){
+                $(".cincoLinks").slideToggle("slow");
+            });
+            $("#generoLink").mouseover(function(){
+                $(".generosub").slideToggle("slow");
+            });
+        });
+    </script>
   </head>
   <body>
-    <div>
+  <div class="top-bar">
+    <div class="top-nav clearfix">                                
+        <div id="top-menu">
+            <ul class="menu">
+                <li><a href="#" id="nosotrosLink">Nosotros</a>
+                    <ul id="sub-menu" class="cincoLinks">
+                      <li ><a href="http://www.wikimedia.org.ar/equipo/">El Equipo</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/inscripcion/">Asociate</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/que-es/estatuto-social/">Estatuto Social</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/que-es/finanzas/">Balances</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/donaciones/">Donaciones</a></li>
+                    </ul><!--sub menu -->
+                </li>
+                <li><a href="http://www.wikimedia.org.ar/programadeeducacion/">Educación</a></li>
+                <li><a href="http://www.wikimedia.org.ar/glam/">Promoción de instituciones culturales</a></li>
+                <li><a href="http://www.wikimedia.org.ar/#">Apoyo a la comunidad</a></li>
+                <li><a href="http://www.wikimedia.org.ar/proyectos/brecha-de-genero/" id="generoLink">Género</a>
+                    <ul id="sub-menu" class="generosub">
+                     <li><a href="http://www.wikimedia.org.ar/category/les-expertes/">Les Expertes</a></li>
+                    </ul><!-- fin submenu-->
+                </li>
+                <li><a href="http://www.wikimedia.org.ar/contacto/">Contacto</a></li>
+            </ul><!-- class menu -->
+        </div><!-- fin top menu -->
+    </div> 
+    <div class="header-social">
+        <ul class="clearfix">
+            <li class="social-icon fb"><a title="Facebook" href="https://www.facebook.com/WikimediaArgentina/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li class="social-icon tw"><a class="bk-tipper-bottom" title="Twitter" href="https://twitter.com/wikimedia_ar" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li class="social-icon inst"><a title="Instagram" href="https://www.instagram.com/wikimedia_ar/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li class="social-icon yt"><a title="Youtube" href="https://www.youtube.com/channel/UCv5_XQA53DDuAjLLQu-6-AA" target="_blank"><i class="fa fa-youtube"></i></a></li>
+        </ul><!-- fin ul-->
+    </div><!-- fin header social-->
+</div><!-- fin top bar -->
+
+  <!-- mobile-bar -->
+    <div class="mobile-bar">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()"><i class="fa fa-bars" aria-hidden="true"></i>
           </span>
     </div>
 
-
-        <!-- menu mobile-->
+   <!-- menu mobile-->
         <div id="mySidenav" class="sidenav">
             <div class="control-boton closebtn">
                 <a class="boton-close" onclick="closeNav()"><i class="fa fa-arrow-left flecha"></i></a>
             </div><!-- fin control-boton -->
-          <div class="top-menu">
+          <div class="menu-mobile">
                 <h3> Top Menu </h3>
                 <ul>
                   <li><a href="http://www.wikimedia.org.ar/#">Nosotros</a>
-                <ul class="sub-menu">
+                <ul class="sub-menu-mobile">
                   <li><a href="http://www.wikimedia.org.ar/equipo/">El Equipo</a></li>
                   <li><a href="http://www.wikimedia.org.ar/inscripcion/">Asociate</a></li>
                   <li><a href="http://www.wikimedia.org.ar/que-es/estatuto-social/">Estatuto Social</a></li>
@@ -43,7 +90,7 @@
               <li><a href="http://www.wikimedia.org.ar/glam/">Promoción de instituciones culturales</a></li>
               <li><a href="http://www.wikimedia.org.ar/#">Apoyo a la comunidad</a></li>
               <li><a href="http://www.wikimedia.org.ar/proyectos/brecha-de-genero/">Género</a>
-                <ul class="sub-menu">
+                <ul class="sub-menu-mobile">
                   <li><a href="http://www.wikimedia.org.ar/category/les-expertes/">Les Expertes</a></li>
                 </ul><!-- fin class submenu-->
               </li><!-- fin li género-->
@@ -54,16 +101,16 @@
                 <h3>Menú principal</h3>
                     <ul>
                       <li><a>Programas</a>
-                    <ul class="sub-menu">
-                      <li><a href="http://www.wikimedia.org.ar/glam/">Promoción de instituciones culturales</a></li>
-                      <li><a href="http://www.wikimedia.org.ar/programadeeducacion/">Educación</a></li>
-                      <li><a href="http://www.wikimedia.org.ar/#">Apoyo a la comunidad</a></li>
-                    </ul><!--sub menu fin-->
-                  </li><!-- fin li programas-->
-                  <li><a href="http://campus.wikimedia.org.ar/">Campus virtual</a></li>
-                  <li><a href="http://www.wikimedia.org.ar/a-las-fuentes/">A las fuentes</a></li>
-                  <li><a href="http://www.wikimedia.org.ar/inscripcion/">Asociate</a></li>
-                </ul><!-- fin menu principal-->
+                        <ul class="sub-menu-mobile">
+                          <li><a href="http://www.wikimedia.org.ar/glam/">Promoción de instituciones culturales</a></li>
+                          <li><a href="http://www.wikimedia.org.ar/programadeeducacion/">Educación</a></li>
+                          <li><a href="http://www.wikimedia.org.ar/#">Apoyo a la comunidad</a></li>
+                        </ul><!--sub menu fin-->
+                      </li><!-- fin li programas-->
+                      <li><a href="http://campus.wikimedia.org.ar/">Campus virtual</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/a-las-fuentes/">A las fuentes</a></li>
+                      <li><a href="http://www.wikimedia.org.ar/inscripcion/">Asociate</a></li>
+                  </ul><!-- fin menu principal-->
             </div><!-- fin main menu-->
         </div><!-- fin class block -->
 
@@ -77,7 +124,7 @@
       <div class="contenido">
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10">
           <div class="subtitulos">
-            <h3 class="familia-fuente mejorar">
+            <h3 class="familia-fuente mejorar" id="quimica">
             MEJORAR EL APRENDIZAJE DE QUÍMICA Y BIOLOGÍA MOLECULAR CON EL USO DE WIKIPEDIA</h3>
           </div>
 
@@ -98,7 +145,7 @@
         
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10">
           <div class="subtitulos">
-            <h3 class="familia-fuente">REDUCIR LA BRECHA DE GÉNERO EN WIKIPEDIA DESDE ESPACIOS UNIVERSITARIOS</h3>
+            <h3 class="familia-fuente" id="brecha">REDUCIR LA BRECHA DE GÉNERO EN WIKIPEDIA DESDE ESPACIOS UNIVERSITARIOS</h3>
           </div>
           <p><strong>Profesora: </strong><span class="rojo">Ester Bonet</span></p>
           <p><strong>Lugar:</strong> <span class="rojo">Universitat Autònoma de Barcelona (UAB)</span></p>
@@ -119,7 +166,7 @@
 
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10 impar">
           <div class="subtitulos">
-            <h3 class="familia-fuente">TRANSMITIR FILOSOFÍA USANDO WIKIPEDIA</h3>
+            <h3 class="familia-fuente" id="filosofia">TRANSMITIR FILOSOFÍA USANDO WIKIPEDIA</h3>
           </div>
           <p><strong>Profesora: </strong> <span class="rojo">José Francisco Barrón Tovar</span></p>
           <p><strong>Lugar: </strong> <span class="rojo">Universidad Autónoma de México (UNAM)</span></p>
@@ -148,7 +195,7 @@
 
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10">
           <div class="subtitulos">
-            <h3 class="familia-fuente">WIKIPEDIA Y SU USO EN LA LICENCIATURA EN LENGUA Y LITERATURA HISPÁNICA</h3>
+            <h3 class="familia-fuente" id="literatura">WIKIPEDIA Y SU USO EN LA LICENCIATURA EN LENGUA Y LITERATURA HISPÁNICA</h3>
           </div>
           <p><strong>Profesora: </strong><span class="rojo">Mónica Quijano Velasco</span> </p>
           <p><strong>Lugar: </strong> <span class="rojo">Universidad Autónoma de México (UNAM)</span></p>
@@ -169,7 +216,7 @@
 
         <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10 impar">
           <div class="subtitulos">
-            <h3 class="familia-fuente">WIKIPEDIA EN LA UNIVERSIDAD:<br> UNA EXPERIENCIA DE FORMACIÓN DOCENTE EN UNIVERSIDADES PÚBLICAS DE ECUADOR</h3>
+            <h3 class="familia-fuente" id="ecuador">WIKIPEDIA EN LA UNIVERSIDAD:<br> UNA EXPERIENCIA DE FORMACIÓN DOCENTE EN UNIVERSIDADES PÚBLICAS DE ECUADOR</h3>
           </div>
           <p><strong>Profesora: </strong><span class="rojo">Paola Ricaurte Quijano</span></p>
           <p><strong>Lugar: </strong> <span class="rojo">Instituciones públicas de Educación Superior en Guayaquil: ESPOL y la Universidad de Guayaquil</span></p>
@@ -183,8 +230,11 @@
             <ul>
               <li>Cambio de paradigma en la manera de construir conocimiento en la era digital y de utilizar las plataformas tecnológicas para alcanzar metas pedagógicas</li>
             </ul>
+            <div class="subtitulos" >
+            <h3 class="familia-fuente" id="rioNegro">WIKIPEDIA EN LA UNIVERSIDAD NACIONAL DE RÍO NEGRO</h3>
+          </div>
           <p><strong>Profesor: </strong> <span class="rojo">Dr. Fernando Archuby</span></p>
-          <p><strong>Lugar: </strong><span class="rojo">Universidad Nacional de Río Negro.</span> </p>
+          <p><strong>Lugar: </strong><span class="rojo" >Universidad Nacional de Río Negro.</span> </p>
           <p><strong>Cátedra: </strong> <span class="rojo">Paleontología</span> </p>
           <p><strong>Alcance: </strong><span class="rojo">30 docentes, estudiantes e investigadores vinculados a la Paleontología, Arqueología y Antropología.</span> </p>
           <p><strong>Proyecto Wikimedia utilizado: </strong><span class="rojo">Wikipedia</span></p>
@@ -207,7 +257,7 @@
 
        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10">
         <div class="subtitulos">  
-          <h3 class="familia-fuente">CLUB DE EDICIÓN</h3>
+          <h3 class="familia-fuente" id="ministerio">CLUB DE EDICIÓN</h3>
         </div>
           <p><strong>Contraparte: </strong><span class="rojo">Ministerio de Educación de la provincia de La Rioja</span></p>
           <p><strong>Alcance: </strong><span class="rojo">120 alumnos y 60 docentes.</span> </p> 
@@ -229,6 +279,9 @@
               <li>Nuevos editores docentes y alumnos conocieron la herramienta y construyeron contenido desde sus materias y en el marco del currículum escolar. </li>
               <li>Los/a alumnos/as llevaron adelante la investigación de las fuentes que fueron sumadas a los artículos. </li>
             </ul>
+            <div class="subtitulos">  
+          <h3 class="familia-fuente" id="aula">WIKIPEDIA EN EL AULA</h3>
+        </div>
           <p><strong>Contraparte: </strong> <span class="rojo">Instituto Técnico Huergo (Escuela Secundaria)</span></p>
           <p><strong>Materias: </strong><span class="rojo">Historia y Educación para la Tecnología</span></p>
           <p><strong>Alcance: </strong><span class="rojo">45 alumnos y 4 docentes.</span> </p>
@@ -265,6 +318,16 @@
         </div>
 
       </div><!-- fin contenido-->
+      <footer class="row">
+        <div class="col-sx-12 col-sm-12 col-md-12 pie">
+          <div class="col-sx-6 col-sm-6 col-md-6">
+            <a href="http://www.wikimedia.org.ar/" target="_blank"><img src="img/logo-header.png" class="img-responsive"/></a>  
+          </div>
+          <div class="col-sx-6 col-sm-6 col-md-6 licencia-commons">
+            <span class="pull-right">Esta obra está bajo una <a class="commons" href="http://creativecommons.org/licenses/by/4.0/">Licencia Creative Commons Atribución 4.0 Internacional.</a></span>
+          </div>
+        </div><!--fin div col-12-->
+      </footer><!--fin footer-->
     </div><!-- fin container-->
     <script>
         function initMap() {
