arreglo tamaño del mapa + link en el pin UAH + colores + logo iberocoop

--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -127,7 +127,8 @@
 
     <div class="container-fluid" id="contenido">
       <header class="row">
-        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10">
+        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-1 col-sm-10 col-md-offset-1 col-md-10" id="iberocoop-titulo">
+          <img src="img/Logo_Iberocoop.svg.png/" alt="logo Iberocoop" class="img-responsive"> 
           <h1 id="titulo">EDUCACIÓN EN IBEROCOOP</h1>
         </div>
       </header><!-- fin header-->
@@ -310,7 +311,7 @@
               <li>Permitir que los/as docentes y alumnos/as utilicen herramientas de la cultura digital y libre en sus diseños pedagógicos. </li>
             </ul>
           <p><strong>Profesor: </strong><span class="rojo">Enzo Abbagliati</span></p>
-          <p><strong>Lugar: </strong><span class="rojo">La Universidad Alberto Hurtado (UAH)</span></p>
+          <p><strong>Lugar: </strong><span class="rojo" id="uah">La Universidad Alberto Hurtado (UAH)</span></p>
           <p><strong>Cátedra: </strong><span class="rojo">Paleontología</span></p>
           <p><strong>Alcance: </strong><span class="rojo">30 docentes, estudiantes e investigadores vinculados a la Paleontología, Arqueología y Antropología.</span></p>
           <p><strong>Proyecto Wikimedia utilizado: </strong><span class="rojo">Wikipedia</span></p>
@@ -542,7 +543,7 @@
             '<div id="bodyContent">'+
             '<h3>Actividades</h3>'+
             '<ul>'+
-            '<li>Wikipedia en el Aula.<a href="#aula"> Ver información</a></li>'+
+            '<li>Wikipedia en el Aula.<a href="#uah"> Ver información</a></li>'+
             '</div>'+
             '</div>';
 
