arreglo meta content provisorio

--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -6,7 +6,7 @@
     <!-- FAVICON -->
 	<link rel="icon" href="img/fav.png" type="image">
     <!-- DESCRIPCIÓN DE CONTENIDO -->
-    <meta name="description" content="Sitio informativo sobre las capacitaciones y charlas sobre Wikipedia.">
+    <meta name="description" content="Sitio informativo sobre cursos y capacitaciones acerca de Wikipedia.">
     <meta name="keywords" content="Wikimedia,Wiki,Wikipedia,Charlas,Capacitaciones,Capacitación">
     <meta name="author" content="Wikimedia, Daniela Belvedere, Constanza Yáñez Calderón">
       <!-- hojas de estilo -->
