modificacion de subtitulo

--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -315,8 +315,11 @@
               <li>Incentivar la investigación y el uso de fuentes primarias y secundarias para construir el contenido en la enciclopedia.</li>
               <li>Permitir que los/as docentes y alumnos/as utilicen herramientas de la cultura digital y libre en sus diseños pedagógicos. </li>
             </ul>
+            <div class="subtitulos">  
+          <h3 class="familia-fuente" id="uah">WIKIPEDIA EN LA UNIVERSIDAD DE ALBERTO HURTADO DE CHILE</h3>
+        </div>
           <p><strong>Profesor: </strong><span class="rojo">Enzo Abbagliati</span></p>
-          <p><strong>Lugar: </strong><span class="rojo" id="uah">La Universidad Alberto Hurtado (UAH)</span></p>
+          <p><strong>Lugar: </strong><span class="rojo" >La Universidad Alberto Hurtado (UAH)</span></p>
           <p><strong>Cátedra: </strong><span class="rojo">Paleontología</span></p>
           <p><strong>Alcance: </strong><span class="rojo">30 docentes, estudiantes e investigadores vinculados a la Paleontología, Arqueología y Antropología.</span></p>
           <p><strong>Proyecto Wikimedia utilizado: </strong><span class="rojo">Wikipedia</span></p>
