meta content modificado

--- a/wikimedia/map.html
+++ b/wikimedia/map.html
@@ -6,8 +6,8 @@
     <!-- FAVICON -->
 	<link rel="icon" href="img/fav.png" type="image">
     <!-- DESCRIPCIÓN DE CONTENIDO -->
-    <meta name="description" content="Sitio informativo sobre cursos y capacitaciones acerca de Wikipedia.">
-    <meta name="keywords" content="Wikimedia,Wiki,Wikipedia,Charlas,Capacitaciones,Capacitación">
+    <meta name="description" content="Los proyectos educativos de Wikipedia.">
+    <meta name="keywords" content="Wikimedia,Wiki,Wikipedia,Charlas,Capacitaciones,Capacitación, Proyectos educativos, educación">
     <meta name="author" content="Wikimedia, Daniela Belvedere, Constanza Yáñez Calderón">
       <!-- hojas de estilo -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
